En este commit acabé agregué cosas al index y no me quiere dejar abrir la pagina ropa

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/estiloscss.css">
 
   <title>Tienda Zen OA</title>
-  <script src="./main.js"></script>
+  
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ropa</a>
+            <a class="nav-link" href="./paginas/ropa">Ropa</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Artículos</a>
@@ -89,14 +89,25 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
     </div>
 
-    <div class="contenedormain">
+    <div class="contenedormain contenedormainbordeinferior">
       <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
       </h2>
       <p>Kamal Ravikant</p>
     </div>
+
+    <div class=" contenedormain2">
+      <div class="contenedorhijo1">
+        <h2>¿Porqué  <span>meditar</span> ?</h2>
+        <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
+      </div>
+
+      <div class="contenedorhijo1">
+        <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la concentración y la claridad mental además de  aumentar la sensación de bienestar general.</p>
+      </div>
+    </div>
+    
   </main>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
