Index está con color de fondo en degradado decorado, agregué más contenido como porqué meditar y beneficios de yoga, hay que dar contenido a ropa

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./paginas/ropa">Ropa</a>
+            <a class="nav-link" href="paginas/ropa.html">Ropa</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Artículos</a>
@@ -57,7 +57,7 @@
   </nav>
   <main>
 
-    <div class="contenedormain">
+    <div class="contenedormain ">
       <h1>UNA VIDA <span>ZEN</span> 
       </h1>
       <p>Ropa, articulos de meditación y clases de yoga.
@@ -97,7 +97,7 @@
       <p>Kamal Ravikant</p>
     </div>
 
-    <div class=" contenedormain2">
+    <div class=" contenedormain2 contenedormainbordeinferior">
       <div class="contenedorhijo1">
         <h2>¿Porqué  <span>meditar</span> ?</h2>
         <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
@@ -105,6 +105,17 @@
 
       <div class="contenedorhijo1">
         <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la concentración y la claridad mental además de  aumentar la sensación de bienestar general.</p>
+      </div>
+    </div>
+
+    <div class=" contenedormain2">
+      <div class="contenedorhijo1">
+        <h2>¿ Y el  <span>yoga</span> ?</h2>
+        <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te permite llevar una vida más equilibrada y satisfactoria</p>
+      </div>
+
+      <div class="contenedorhijo1">
+        <img class="banneryoga" src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
       </div>
     </div>
     
