en este commit cambié algunas clases para poder dar estilos mas variables a los fondos de pantalla, el boton de subida se retiró, agregué lo basico de los otros html y un estilo inicial para la pagina articulos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="bodybackgroundcolor1">
 
   <!-- AQUI VA EL ENCABEZADO -->
   <header class="container-fluid bg-primary d-flex justify-content-center">
@@ -39,13 +39,13 @@
             <a class="nav-link" href="paginas/ropa.html">Ropa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Artículos</a>
+            <a class="nav-link" href="./paginas/articulos.html">Artículos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Nosotros</a>
+            <a class="nav-link" href="./paginas/nosotros.html"> Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Clases</a>
+            <a class="nav-link" href="./paginas/clases.html">Clases</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -56,25 +56,19 @@
     </div>
   </nav>
   <main>
-
     <div class="contenedormain ">
-      <h1>UNA VIDA <span>ZEN</span>
+      <h1 class="colorh2">UNA VIDA <span>ZEN</span>
       </h1>
       <p>Ropa, articulos de meditación y clases de yoga.
       </p>
     </div>
-
-    <!-- agregué un boton para que pueda subir  -->
-    <a href="#top" id="btn-volver-arriba">Arriba</a>
-    <!--  -->
-
-    <div class="contenedormain contenedormainbordeinferior">
+    <div class="contenedormain contenedormainbordeinferior1">
       <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
       </h2>
       <p>Kamal Ravikant</p>
     </div>
 
-    <div class=" contenedormain2 contenedormainbordeinferior">
+    <div class=" contenedormain2 contenedormainbordeinferior1">
       <div class="contenedorhijo1">
         <h2>¿Porqué <span>meditar</span> ?</h2>
         <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
@@ -86,16 +80,22 @@
       </div>
     </div>
 
-    <div class=" contenedormain2">
+    <div class=" contenedormain2 contenedormainbordeinferior1">
       <div class="contenedorhijo1">
-        <h2>¿ Y el <span>yoga</span> ?</h2>
+        <h2 class="">¿ Y el <span>yoga</span> ?</h2>
         <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te permite
           llevar una vida más equilibrada y satisfactoria</p>
       </div>
 
-      <div class="contenedorhijo1">
+      <div class="contenedorhijo1  ">
         <img class="banneryoga" src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
       </div>
+    </div>
+    <div class="contenedormain ">
+      <h2 class="colorh2">¡Practica con nosotros!</h2>
+      <a href="./paginas/clases.html"><img src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
+      <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
+        experiencia zen.</p>
     </div>
 
   </main>
