--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -10,11 +10,11 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estiloscss.css">
 
-    <title>Tienda Zen OA</title>
+    <title>Ropa</title>
 
 </head>
 
-<body>
+<body class="bodybackgroundcolor1">
 
     <!-- AQUI VA EL ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex justify-content-center">
@@ -40,13 +40,13 @@
                         <a class="nav-link" href="#">Ropa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Artículos</a>
+                        <a class="nav-link" href="../paginas/articulos.html">Artículos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Nosotros</a>
+                        <a class="nav-link" href="../paginas/nosotros.html"> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Clases</a>
+                        <a class="nav-link" href="../paginas/clases.html">Clases</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -58,9 +58,6 @@
         </div>
     </nav>
     <main>
-        <!-- agregué un boton para que pueda subir  -->
-        <a href="#top" id="btn-volver-arriba">Arriba</a>
-        <!--  -->
         <div class="contenedormaingrid">
             <div class="gridhijo1">
                 <h1>Ropa</h1>
