En este commit arregle problemas de diseño y cambie algunas clases, cambie el index a sistema de grillas de bootstrap y lo hice responsive, modifique para que el header y el footer fueran responsive en todas las paginas

--- a/paginas/articulos.html
+++ b/paginas/articulos.html
@@ -18,7 +18,7 @@
 
     <!-- AQUI VA EL ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex justify-content-center">
-        <p class="text-light my-0 p-2 fs-5">
+        <p class="text-light my-0 p-2 ">
             Contáctanos: +(57) 300 567 264 2
         </p>
     </header>
@@ -62,7 +62,7 @@
             <h1 class="colorh2"> Artículos para yoga y meditación</h1>
             <img src="../multimedia/imagenes/articulos/imgfondo.jpg" alt="">
         </div>
-        
+
 
     </main>
 
