--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- AQUI VA EL ENCABEZADO -->
   <header class="container-fluid bg-primary d-flex justify-content-center">
-    <p class="text-light my-0 p-2 fs-5">
+    <p class="text-light my-0 p-2 ">
       Contáctanos: +(57) 300 567 264 2
     </p>
   </header>
@@ -56,46 +56,58 @@
     </div>
   </nav>
   <main>
-    <div class="contenedormain ">
-      <h1 class="colorh2">UNA VIDA <span>ZEN</span>
-      </h1>
-      <p>Ropa, articulos de meditación y clases de yoga.
-      </p>
-    </div>
-    <div class="contenedormain contenedormainbordeinferior1">
-      <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
-      </h2>
-      <p>Kamal Ravikant</p>
-    </div>
+   
+    <!-- Sistema de grillas bootstrap -->
+    <div class="container col ">
+      <div class="row col-md-12 contenedormain">
+        <h1 class="colorh2 ">UNA VIDA <span>ZEN</span>
+        </h1>
+        <p class=>Ropa, articulos de meditación y clases de yoga.
+        </p>
 
-    <div class=" contenedormain2 contenedormainbordeinferior1">
-      <div class="contenedorhijo1">
-        <h2>¿Porqué <span>meditar</span> ?</h2>
-        <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
       </div>
-
-      <div class="contenedorhijo1">
-        <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
-          concentración y la claridad mental además de aumentar la sensación de bienestar general.</p>
+      <div class="row col-md-12 contenedormainbordeinferior1">
+        <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
+        </h2>
+        <p>Kamal Ravikant</p>
       </div>
     </div>
 
-    <div class=" contenedormain2 contenedormainbordeinferior1">
-      <div class="contenedorhijo1">
-        <h2 class="">¿ Y el <span>yoga</span> ?</h2>
-        <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te permite
-          llevar una vida más equilibrada y satisfactoria</p>
-      </div>
-
-      <div class="contenedorhijo1  ">
-        <img class="banneryoga" src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
+    <div class="container contenedormainbordeinferior1 my-2">
+      <div class="row">
+        <div class="col-xl-6 col-sm-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
+          <h2>¿Porqué <span>meditar</span>?</h2>
+          <img  src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
+        </div>
+        <div class="col-xl-6 col-sm-12 col-md-6 my-5 d-flex align-items-center justify-content-center p-5">
+          <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
+            concentración y la claridad mental además de aumentar la sensación de bienestar general.</p>
+        </div>
       </div>
     </div>
-    <div class="contenedormain ">
-      <h2 class="colorh2">¡Practica con nosotros!</h2>
-      <a href="./paginas/clases.html"><img src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
-      <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
-        experiencia zen.</p>
+
+    <div class="container contenedormainbordeinferior1 my-2">
+      <div class="row">
+        <div class="col-xl-6 col-sm-12 col-md-6 p-5 d-flex justify-content-center align-items-center flex-column">
+          <h2 class="">¿ Y el <span>yoga</span> ?</h2>
+          <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te permite
+            llevar una vida más equilibrada y satisfactoria</p>
+        </div>
+        <div class="col-xl-6 col-sm-12 col-md-6 my-3 d-flex justify-content-center ">
+          <img src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="container  my-2">
+      <div class="row">
+        <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column">
+          <h2 class="colorh2">¡Practica con nosotros!</h2>
+          <a class="my-5" href="./paginas/clases.html"><img src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
+          <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
+            experiencia zen.</p>
+        </div>
+      </div>
     </div>
 
   </main>
@@ -107,7 +119,7 @@
 
   <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
     <div class="contenedorfooter m-3">
-      <p class="text-light my-0 p-2 fs-5">
+      <p class="text-light my-0 p-2 ">
         Sígunenos en nuestras redes:
       </p>
     </div>
