--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -18,7 +18,7 @@
 
     <!-- AQUI VA EL ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex justify-content-center">
-        <p class="text-light my-0 p-2 fs-5">
+        <p class="text-light my-0 p-2 ">
             Contáctanos: +(57) 300 567 264 2
         </p>
     </header>
@@ -198,7 +198,7 @@
 
     <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
         <div class="contenedorfooter m-3">
-            <p class="text-light my-0 p-2 fs-5">
+            <p class="text-light my-0 p-2 ">
                 Sígunenos en nuestras redes:
             </p>
         </div>
