agregué estilos acordes a la pagina articulos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/estiloscss.css">
   <title>Tienda Zen OA</title>
 </head>
+
 <body class="bodybackgroundcolor1">
 
   <!-- AQUI VA EL ENCABEZADO -->
@@ -54,25 +55,28 @@
   </nav>
   <main>
     <!-- Sistema de grillas bootstrap -->
-    <div class="container col ">
-      <div class="row col-md-12 contenedormain">
-        <h1 class="colorh2 ">UNA VIDA <span>ZEN</span>
-        </h1>
-        <p class=>Ropa, articulos de meditación y clases de yoga.
-        </p>
-
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-12 contenedormain">
+          <h1 class="colorh2 ">UNA VIDA <span>ZEN</span>
+          </h1>
+          <p class=>Ropa, articulos de meditación y clases de yoga.
+          </p>
+        </div>
       </div>
-      <div class="row col-md-12 contenedormainbordeinferior1">
-        <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
-        </h2>
-        <p>Kamal Ravikant</p>
+      <div class="row">
+        <div class=" col-md-12 contenedormainbordeinferior1">
+          <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
+          </h2>
+          <p>Kamal Ravikant</p>
+        </div>
       </div>
     </div>
     <div class="container contenedormainbordeinferior1 my-2">
       <div class="row">
         <div class="col-xl-6 col-sm-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
           <h2>¿Porqué <span>meditar</span>?</h2>
-          <img  src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
+          <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
         </div>
         <div class="col-xl-6 col-sm-12 col-md-6 my-5 d-flex align-items-center justify-content-center p-5">
           <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
@@ -84,7 +88,8 @@
       <div class="row">
         <div class="col-xl-6 col-sm-12 col-md-6 p-5 d-flex justify-content-center align-items-center flex-column">
           <h2 class="">¿ Y el <span>yoga</span> ?</h2>
-          <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te permite
+          <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te
+            permite
             llevar una vida más equilibrada y satisfactoria</p>
         </div>
         <div class="col-xl-6 col-sm-12 col-md-6 my-3 d-flex justify-content-center ">
@@ -94,19 +99,17 @@
     </div>
     <div class="container  my-2">
       <div class="row">
-        <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column">
+        <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column ">
           <h2 class="colorh2">¡Practica con nosotros!</h2>
-          <a class="my-5" href="./paginas/clases.html"><img src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
+          <a class="my-5 contenedorropa1" href="./paginas/clases.html"><img
+              src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
           <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
             experiencia zen.</p>
         </div>
       </div>
     </div>
   </main>
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+
 
   <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
     <div class="contenedorfooter m-3">
@@ -114,12 +117,20 @@
         Sígunenos en nuestras redes:
       </p>
     </div>
-    <div class="contenedorfooter m-3">
-      <a class="nav-link active" aria-current="page" href="">Facebook</a>
+    <div class="contenedorfooter d-flex ">
+      <div class="contenedorfooter m-3">
+        <a class="nav-link active" aria-current="page" href="">Facebook</a>
+      </div>
+      <div class="contenedorfooter m-3">
+        <a class="nav-link active" aria-current="page" href="">Instagram</a>
+      </div>
     </div>
-    <div class="contenedorfooter m-3">
-      <a class="nav-link active" aria-current="page" href="">Instagram</a>
-    </div>
+
   </footer>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
