--- a/paginas/articulos.html
+++ b/paginas/articulos.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="bodybackgroundcolor2">
+<body class="bodybackgroundcolor1">
 
     <!-- AQUI VA EL ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex justify-content-center">
@@ -58,10 +58,43 @@
         </div>
     </nav>
     <main>
-        <div class="contenedormainsinmargin contenedormainbordeinferior2">
-            <h1 class="colorh2"> Artículos para yoga y meditación</h1>
-            <img src="../multimedia/imagenes/articulos/imgfondo.jpg" alt="">
+        <div class="container m-1 mb-5 tarjeta gridhijo1">
+            <div class="row">
+                <div class="col-xl-12 d-flex justify-content-center flex-wrap">
+                    <h1 class="my-4">Artículos para yoga y meditación</h1>
+                    <img class="my-4" src="../multimedia/imagenes/articulos/imgfondo.jpg" alt="">
+                </div>
+            </div>
         </div>
+        <div class="container my-5 contenedorropa1">
+            <div class="row">
+                <div
+                    class="col col-xl-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center flex-wrap tarjeta2">
+                    <div>
+                        <h2 class="colorfondotitulotop mt-3">¿Quieres tu esterilla?</h2>
+                        <p class="my-4">¡Ideal para sesiones de yoga o meditación!</p>
+                        <div class="d-flex justify-content-center">
+                            <ul class="listaarticulos">
+                                <li>Variedad de colores</li>
+                                <li>Diferentes tamaños</li>
+                                <li>Los mejores materiales</li>
+                                <button class="boton my-5"><a href="#">Comprar</a></button>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col col-xl-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center flex-wrap ">
+                    <div>
+                        <img class="my-4" src="../multimedia/imagenes/articulos/esterilla1.jpg" alt="">
+                    </div>
+                    <div>
+                        <img class="my-4" src="../multimedia/imagenes/articulos/esterilla2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
     </main>
@@ -75,16 +108,19 @@
     <!-- FOOTER -->
     <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
         <div class="contenedorfooter m-3">
-            <p class="text-light my-0 p-2 fs-5">
+            <p class="text-light my-0 p-2 ">
                 Sígunenos en nuestras redes:
             </p>
         </div>
-        <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Facebook</a>
+        <div class="contenedorfooter d-flex ">
+            <div class="contenedorfooter m-3">
+                <a class="nav-link active" aria-current="page" href="">Facebook</a>
+            </div>
+            <div class="contenedorfooter m-3">
+                <a class="nav-link active" aria-current="page" href="">Instagram</a>
+            </div>
         </div>
-        <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Instagram</a>
-        </div>
+
     </footer>
 
 </body>
