--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -9,9 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estiloscss.css">
-
     <title>Ropa</title>
-
 </head>
 
 <body class="bodybackgroundcolor1">
@@ -79,7 +77,7 @@
             </div>
         </div>
         <div class="contenedormain contenedortopsbackgroundcolor">
-            <div class="contenedormain2 colorfondotitulotop">
+            <div class="contenedortitulosropa colorfondotitulotop">
                 <h2>Tops</h2>
             </div>
 
@@ -87,36 +85,54 @@
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top1.jpg" alt="">
-                        <p>Top blanco</p>
+                        <div>
+                            <p>Top blanco</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top2.jpg" alt="">
-                        <p>Top negro</p>
+                        <div>
+                            <p>Top negro</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top5.jpg" alt="">
-                        <p>Top gris</p>
+                        <div>
+                            <p>Top gris</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top3.jpg" alt="">
-                        <p>Top Lila</p>
+                        <div>
+                            <p>Top lila</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top4.jpg" alt="">
-                        <p>Top rosa</p>
+                        <div>
+                            <p>Top rosa</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/tops/top6.jpg" alt="">
-                        <p>Top azul</p>
+                        <div>
+                            <p>Top azul</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
 
         </div>
         <div class="contenedormain contenedorpantalonbackgroundcolor">
-            <div class="contenedormain2 colorfondotitulojogger">
+            <div class="contenedortitulosropa colorfondotitulojogger">
                 <h2>Joggers</h2>
             </div>
 
@@ -124,36 +140,54 @@
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger1.jpg" alt="">
-                        <p>Jogger fucsia</p>
+                        <div>
+                            <p>Jogger fucsia</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger2.jpg" alt="">
-                        <p>Jogger rosa</p>
+                        <div>
+                            <p>Jogger rosa</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger3.jpg" alt="">
-                        <p>Jogger violeta</p>
+                        <div>
+                            <p>Jogger violeta</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger4.jpg" alt="">
-                        <p>Jogger negro</p>
+                        <div>
+                            <p>Jogger negro</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger5.jpg" alt="">
-                        <p>Jogger azul</p>
+                        <div>
+                            <p>Jogger azul</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/pantalones/jogger6.jpg" alt="">
-                        <p>Jogger salmón</p>
+                        <div>
+                            <p>Jogger salmón</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
 
         </div>
         <div class="contenedormain contenedortopsbackgroundcolor">
-            <div class="contenedormain2 colorfondotitulotop">
+            <div class="contenedortitulosropa colorfondotitulotop">
                 <h2>Shorts</h2>
             </div>
 
@@ -161,29 +195,47 @@
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short1.jpg" alt="">
-                        <p>Short blanco</p>
+                        <div>
+                            <p>Short blanco</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short2.jpg" alt="">
-                        <p>Short negro</p>
+                        <div>
+                            <p>Short negro</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short3.jpg" alt="">
-                        <p>Short morado</p>
+                        <div>
+                            <p>Short morado</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short4.jpg" alt="">
-                        <p>Short gris</p>
+                        <div>
+                            <p>Short gris</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short5.jpg" alt="">
-                        <p>Short azul</p>
+                        <div>
+                            <p>Short azul</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                     <div class="contenedormain2">
                         <img src="../multimedia/imagenes/ropa/shorts/short6.jpg" alt="">
-                        <p>Short azul oscuro</p>
+                        <div>
+                            <p>Short azul rey</p>
+                            <button><a href="#">Comprar</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -202,12 +254,15 @@
                 Sígunenos en nuestras redes:
             </p>
         </div>
-        <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Facebook</a>
+        <div class="contenedorfooter d-flex ">
+            <div class="contenedorfooter m-3">
+                <a class="nav-link active" aria-current="page" href="">Facebook</a>
+            </div>
+            <div class="contenedorfooter m-3">
+                <a class="nav-link active" aria-current="page" href="">Instagram</a>
+            </div>
         </div>
-        <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Instagram</a>
-        </div>
+        
     </footer>
 
 </body>
