--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body class="bodybackgroundcolor1">
 
   <!-- AQUI VA EL ENCABEZADO -->
-  <header class="container-fluid bg-primary d-flex justify-content-center">
+  <aside class="container-fluid bg-primary d-flex justify-content-center">
     <p class="text-light my-0 p-2 ">
       Contáctanos: +(57) 300 567 264 2
     </p>
-  </header>
-
+  </aside>
+<header>
   <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
     <div class="container-fluid">
       <img class="logo-small me-5" src="./multimedia/imagenes/logob.JPG" alt="logo">
@@ -53,27 +53,26 @@
       </div>
     </div>
   </nav>
+</header>
+  
   <main>
     <!-- Sistema de grillas bootstrap -->
     <div class="container ">
-      <div class="row">
+      <section class="row">
         <div class="col-md-12 contenedormain">
-          <h1 class="colorh2 ">UNA VIDA <span>ZEN</span>
-          </h1>
-          <p class=>Ropa, articulos de meditación y clases de yoga.
-          </p>
+          <h1 class="colorh2 ">UNA VIDA <span>ZEN</span></h1>
+          <p>Ropa, articulos de meditación y clases de yoga. </p>
         </div>
-      </div>
-      <div class="row">
+      </section>
+      <section class="row">
         <div class=" col-md-12 contenedormainbordeinferior1">
-          <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”
-          </h2>
+          <h2>“Cuando algo viene de dentro, cuando es una parte de ti, no tienes opción sino de vivírlo, de expresarlo.”</h2>
           <p>Kamal Ravikant</p>
         </div>
-      </div>
+      </section>
     </div>
     <div class="container contenedormainbordeinferior1 my-2">
-      <div class="row">
+      <section class="row">
         <div class="col-xl-6 col-sm-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
           <h2>¿Porqué <span>meditar</span>?</h2>
           <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
@@ -82,10 +81,10 @@
           <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
             concentración y la claridad mental además de aumentar la sensación de bienestar general.</p>
         </div>
-      </div>
+      </section>
     </div>
     <div class="container contenedormainbordeinferior1 my-2">
-      <div class="row">
+      <section class="row">
         <div class="col-xl-6 col-sm-12 col-md-6 p-5 d-flex justify-content-center align-items-center flex-column">
           <h2 class="">¿ Y el <span>yoga</span> ?</h2>
           <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te
@@ -95,10 +94,10 @@
         <div class="col-xl-6 col-sm-12 col-md-6 my-3 d-flex justify-content-center ">
           <img src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
         </div>
-      </div>
+      </section>
     </div>
     <div class="container  my-2">
-      <div class="row">
+      <section class="row">
         <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column ">
           <h2 class="colorh2">¡Practica con nosotros!</h2>
           <a class="my-5 contenedorropa1" href="./paginas/clases.html"><img
@@ -106,7 +105,7 @@
           <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
             experiencia zen.</p>
         </div>
-      </div>
+      </section>
     </div>
   </main>
 
