en este commit cambié las variables de los colores de fondo y terminé la pagina de nosotros

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="bodybackgroundcolor1">
 
     <!-- AQUI VA EL ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex justify-content-center">
@@ -58,6 +58,45 @@
         </div>
     </nav>
     <main>
+        <div class="bloqueimghorizontal">
+            <h2>Sobre nosotros</h2>
+            <img class="imagenhorizontal" src="../multimedia/imagenes/nosotros/nosotros5.jpg" alt="">
+        </div>
+        <div class="container my-5">
+            <div class="row d-flex ">
+                <p class="my-4 contenedorpantalonbackgroundcolor">Somos una tienda que nació con la idea de brindar apoyo y ... ... ...  a la comunidad de meditadores en suramerica Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, enim? Eum ducimus doloribus natus reiciendis earum recusandae, cupiditate eos nulla sunt. Ullam vero eligendi atque magni harum dolore eum? Reiciendis!
+                </p>
+                <img src="../multimedia/imagenes/nosotros/suramerica.jpg" alt="">
+                <p class="my-4 contenedorpantalonbackgroundcolor">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quam, nesciunt, ullam laudantium voluptatem dolore dolorum neque debitis impedit excepturi eveniet? Ea sapiente inventore voluptatum temporibus recusandae unde ipsum aliquid?</p>
+            </div>
+        </div>
+        <div class="container my-5 ">
+            <h2 class="my-5 colorfondotitulotop">¡Mira como hemos crecido!</h2>
+            <div class=" d-flex flex-nowrap ">
+                <div class="divisioncrecimiento ">
+                    <p>25</p>
+                    <P>Profesores expertos dispuestos a enseñarte</P>
+                </div>
+                <div class="divisioncrecimiento">
+                    <p>3</p>
+                    <p>¡Paises al alcance de nuestras entregas!</p>
+                </div>
+                <div class="divisioncrecimiento">
+                    <p>20,000 +</p>
+                    <p>¡Clases impartidas!</p>
+                </div>
+            </div>
+        </div>
+        <div class="container my-5">
+            <h2 class="my-5 colorfondotitulotop ">Somos nuestro equipo</h2>
+            <div class=" d-flex flex-nowrap ">
+                <img class="imgexpandir" src="../multimedia/imagenes/nosotros/nosotros_motivacion.jpg" alt="">
+            </div>
+        </div>
+
+
+
+
 
     </main>
 
