commit donde estoy terminando los estilos de la pagina clases

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -59,7 +59,7 @@
     </nav>
     <main>
         <div class="bloqueimghorizontal">
-            <h2>Sobre nosotros</h2>
+            <h2 class="h2horizontal">Sobre nosotros</h2>
             <img class="imagenhorizontal" src="../multimedia/imagenes/nosotros/nosotros5.jpg" alt="">
         </div>
         <div class="container my-5">
@@ -89,7 +89,7 @@
         </div>
         <div class="container my-5">
             <h2 class="my-5 colorfondotitulotop ">Somos nuestro equipo</h2>
-            <div class=" d-flex flex-nowrap ">
+            <div class=" d-flex ">
                 <img class="imgexpandir" src="../multimedia/imagenes/nosotros/nosotros_motivacion.jpg" alt="">
             </div>
         </div>
